# PracticeBar

./: LICENSE  README.md
3-11/: README.md
3-12/: README.md
3-12/vtk_test/: CMakeLists.txt  main.cpp
3-13/: README.md
3-15/: .gitignore  README.md
3-15/fmt_test/: CMakeLists.txt  fmt_output.txt  main.cpp
3-16/: README.md
